2009-04-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* Chnages for 2009 season. Lots.
	
2009-01-20 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/test_servers_gsm.pl: Changed EXO programme poll to return
	  a SUSPENDED status during off-season rather than DOWN.
	  
2008-10-22 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/istar/cone/*: Added iphone cone search stubs for monitor project
	
	* bin/user_agent.pl: Changed endpoint for FTN
	
	* bin/test_servers.pl: Changed endpoint for FTN

	* bin/test_servers_gsm.pl: Changed endpoint for FTN
	
	* bin/soap_client.pl, eSTAR/Util.pm, eSTAR/UA/Handler.pm: Check-in
	  and check-out problems. Reverted to previous version in timeline
	  
	* eSTAR/UA/Util.pm: New file. Bad check-in, but left for reference.
	
	* www/robonet-1.0/cgi-bin/*.cgi: Added new FTN endpoint
	
2008-08-29 Alasdair Allan <aa@astro.ex.ac.uk>

	* Changes for the new FTS node agent endpoint

2008-08-26 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/node_agent.pl & eSTAR/Util.pm: Fixes for DC3
	
2008-08-21 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/event_client.pl: Fixes for $name
	
2008-07-10 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Broker/Handler.pm & bin/event_broker.pl: Caught rogue
	  <Transport role="utility"> messages (originating from VO-GCN)
	  before they could do much harm.

2008-07-09 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Broker/Handler.pm: Bug fix for GCN broken messages
	
2008-06-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_parsemail.pl: Added SMS alerts for ANOMALY events on OGLE 
	  EWS mailings
	
	* bin/test_server_gsm.pl Added Twitter and email to status polling

	* Infrastructure changes to support all of that.
	
2008-06-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/single.cgi, performance.cgi, graphs.cgi, status.cgi
	  & scoring.cgi: Fixed to handle new LT node agent endpoint.
	  
	* bin/test_servers*: Moved LT endpoint.  

2008-05-30 Alasdair Allan <aa@astro.ex.ac.uk>
